--- a/0_start/src/index.html
+++ b/0_start/src/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>Elm AFrame</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no,user-scalable=no,maximum-scale=1">
-    <script src="aframe.min.js"></script>
+    <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
     <script src="aframe-extras.min.js"></script>
-    
+
 </head>
 <body></body>
 </html>
